# TaiwanMarketTimeMachine

./: .cursorrules  .env.example  .gitignore  README.md  START_HERE.md  pyproject.toml  requirements.txt  unify-flow-report.md
.cursor/commands/: flowkit.BDD-Milestone.md  flowkit.Milestone-context.md  flowkit.consistency-check.md  flowkit.pre-unify-check.md  flowkit.refine-loop.md  flowkit.requirement-sync.md  flowkit.system-context.md  flowkit.trace.md  flowkit.unify-flow.md  speckit.implement.md  speckit.plan.md  speckit.specify.md
.flowkit/memory/: system-context-index.md  system-context.md
.flowkit/templates/: Milestone-context-conflict-report.template.md  Milestone-context-output.template.md  refine-plan.template.md  refine-spec-delta.template.md  system-context-template.md  traceability-index-template.md
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md  flowkit.BDD-Milestone.agent.md  flowkit.Milestone-context.agent.md  flowkit.consistency-check.agent.md  flowkit.pre-unify-check.agent.md  flowkit.refine-loop.agent.md  flowkit.requirement-sync.agent.md  flowkit.system-context.agent.md  flowkit.trace.agent.md  flowkit.unify-flow.agent.md  speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.github/prompts/: flowkit.BDD-Milestone.prompt.md  (+8 more)
docs/: 00.目錄結構.md  specit.clarify-CLI說明  technical-debt.md
frontend/: .env.development  .env.production  electron-builder.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src/: logger.py  main.py
tests/: conftest.py
(+116 files in other folders)
