[project]
name = "speckit-template"
version = "0.1.0"
description = "Specification-Driven Development Template Project"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Private - Personal Use Only"}
authors = [
    {name = "Victor", email = "your-email@example.com"}
]

dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = ".artifacts/pytest_cache"
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=src",
    "--cov-report=html:.artifacts/coverage/html",
    "--cov-report=xml:.artifacts/coverage/coverage.xml",
    "--cov-report=term-missing",
]

[tool.coverage.run]
data_file = ".artifacts/coverage/.coverage"

[tool.coverage.html]
directory = ".artifacts/coverage/html"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = []
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
